Feature/refactor naming convention (#16)
* refactor naming

* abstract mapper to enforce single resposibility and help wtih test

* refactor for naming
