# src/mongoFacade/models.py
@@ -13,6 +13,7 @@ class AlertStatus(str, Enum):
     ALARM = "ALARM"
     OK = "OK"
     INSUFFICIENT_DATA = "INSUFFICIENT_DATA"
+    ALL = "ALL"
 
 
 class Organization(EmbeddedDocument):
@@ -28,10 +29,16 @@ class Machine(EmbeddedDocument):
 
 
 class Sensor(Document):
-    sensor_id = StringField(required=False)
-    sensor_name = StringField(required=True)
-    organization = EmbeddedDocumentField(Organization, required=False)
-    machine = EmbeddedDocumentField(Machine, required=False)
     sensor_install_time = DateField(required=False)
     sensor_status = StringField(required=True, max_length=50)
     sensor_tags = DictField(required=True, default={})
+
+
+class Bearing(Document):
+    machine = EmbeddedDocumentField(Machine, required=False)
+    organization = EmbeddedDocumentField(Organization, required=False)
+    bearing_tags = DictField(required=True, default={})
+    alert_status = StringField(required=True, max_length=50, default=AlertStatus.INSUFFICIENT_DATA)
+    sensors_id_list = ListField(required=True, default=[])
+
+
